<resources>
    <string name="app_name">NLSecurity</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="login">LOGIN</string>
    <string name="not_registered">Not Registered?</string>
    <string name="register">Register Now!</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="register_button">REGISTER</string>
    <string name="already_registered">Already Registered?</string>
    <string name="name">Name</string>
    <string name="surnames">Surnames</string>
    <string name="idcard">ID Card</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="allowance_name">Allowance Name</string>
    <string name="add_allowance">ADD ALLOWANCE</string>
    <string name="startdate">Start Date</string>
    <string name="enddate">End Date</string>
    <string name="means_of_transport">Means Of Transport</string>
    <string name="travelleddistances">Travelled Distances</string>
    <string name="toll">Toll Amount</string>
    <string name="parking">Parking Amount</string>
    <string name="location">Location</string>
    <string name="add_expenses">ADD EXPENSES</string>
    <string name="expense_name">Expense Name</string>
    <string name="amount_expense">Amount Expense</string>
    <string name="reason_expense">Reason Expense</string>
    <string name="expensedate">Expense Date</string>
    <string name="expense_code">Code</string>


    <!-- CREDITCARD -->
    <string name="app_namee">CreditCard</string>
    <string name="banco_test">Bank</string>
    <string name="vence_test">Expires:</string>
    <string name="fecha">12/20</string>
    <string name="numero_cuenta">**** **** **** 0011</string>
    <string name="btn_text">Escanear Tarjeta</string>
    <string name="edit_expenses">EDIT EXPENSE</string>
    <string name="edit_allowance">EDIT ALLOWANCE</string>
    <string name="button_add_image">ADD IMAGE</string>
    <string name="department_code">Department Code</string>
    <string name="proyect_code">Proyect Code</string>
    <!-- CREDITCARD -->

    <string-array name="location">
        <item>Europe</item>
        <item>Out Of Europe</item>
    </string-array>
    <string-array name="transports">
        <item>Car</item>
        <item>Bus</item>
        <item>Train</item>
        <item>Taxi</item>
        <item>Plane</item>
    </string-array>
</resources>
