<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center_horizontal"
    tools:context="com.ciber.retoandroid_asier_iker.RegisterActivity">

    <ImageView
        android:layout_width="70dp"
        android:layout_height="50dp"
        android:layout_marginTop="50dp"
        app:srcCompat="@drawable/allowances"></ImageView>
    <EditText
        android:id="@+id/txtAllowanceCode"
        android:hint="@string/expense_code"
        android:layout_width="190dp"
        android:layout_marginTop="5dp"
        android:layout_height="40dp"
        android:drawableLeft="@drawable/code"
        android:paddingLeft="2dp"
        android:inputType="number"/>
    <EditText
        android:id="@+id/txtAllowanceName"
        android:hint="@string/allowance_name"
        android:layout_width="190dp"
        android:layout_marginTop="5dp"
        android:layout_height="40dp"
        android:drawableLeft="@drawable/allowance_name"
        android:paddingLeft="2dp"/>
    <EditText
        android:id="@+id/txtAllowanceStartDate"
        android:hint="@string/startdate"
        android:layout_width="190dp"
        android:layout_marginTop="10dp"
        android:layout_height="40dp"
        android:drawableLeft="@drawable/date"
        android:paddingLeft="2dp"
        android:inputType="date"/>
    <EditText
        android:id="@+id/txtAllowanceEndDate"
        android:hint="@string/enddate"
        android:layout_width="190dp"
        android:layout_marginTop="10dp"
        android:layout_height="40dp"
        android:drawableLeft="@drawable/date"
        android:paddingLeft="2dp"
        android:inputType="date"/>
    <Spinner
        android:id="@+id/spinnerLocation"
        android:hint="@string/location"
        android:layout_width="190dp"
        android:layout_marginTop="10dp"
        android:layout_height="40dp"
        android:drawableLeft="@drawable/location"
        android:paddingLeft="2dp"
        android:entries="@array/location"/>
    <Spinner
        android:id="@+id/spinnerTransport"
        android:hint="@string/means_of_transport"
        android:layout_width="190dp"
        android:layout_marginTop="10dp"
        android:layout_height="40dp"
        android:drawableLeft="@drawable/username"
        android:paddingLeft="2dp"
        android:entries="@array/transports"/>
    <EditText
        android:id="@+id/txtTravelledDistances"
        android:hint="@string/travelleddistances"
        android:layout_width="190dp"
        android:layout_marginTop="10dp"
        android:layout_height="40dp"
        android:drawableLeft="@drawable/travelled_distances"
        android:paddingLeft="2dp"/>
    <EditText
        android:id="@+id/txtTollAmount"
        android:hint="@string/toll"
        android:layout_width="190dp"
        android:layout_marginTop="10dp"
        android:layout_height="40dp"
        android:drawableLeft="@drawable/amount"
        android:paddingLeft="2dp"
        android:inputType="numberDecimal"/>
    <EditText
        android:id="@+id/txtParkingAmount"
        android:hint="@string/parking"
        android:layout_width="190dp"
        android:layout_marginTop="10dp"
        android:layout_height="40dp"
        android:drawableLeft="@drawable/amount"
        android:paddingLeft="2dp"
        android:inputType="numberDecimal"/>
    <Button
        android:id="@+id/btnAddAllowance"
        android:layout_width="190dp"
        android:layout_height="40dp"
        android:layout_marginTop="10dp"
        android:background="#04ea00"
        android:text="@string/add_allowance" />

</LinearLayout>