<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center_horizontal"
    app:passwordToggleEnabled="true"
    tools:context="com.ciber.retoandroid_asier_iker.RegisterActivity">
    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="130dp"
        android:layout_marginTop="10dp"
        app:srcCompat="@drawable/logonls"></ImageView>
    <ImageButton
        android:id="@+id/pickimg"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginTop="10dp"
        app:srcCompat="@drawable/avatar"
        android:scaleType="fitCenter"
        android:onClick="openGallery"></ImageButton>
    <EditText
        android:id="@+id/ED_name"
        android:hint="@string/name"
        android:layout_width="190dp"
        android:layout_marginTop="10dp"
        android:layout_height="40dp"
        android:drawableLeft="@drawable/username"
        android:paddingLeft="2dp"/>
    <EditText
        android:id="@+id/ED_surnames"
        android:hint="@string/surnames"
        android:layout_width="190dp"
        android:layout_marginTop="10dp"
        android:layout_height="40dp"
        android:drawableLeft="@drawable/username"
        android:paddingLeft="2dp"/>
    <EditText
        android:id="@+id/idcard"
        android:hint="@string/idcard"
        android:layout_width="190dp"
        android:layout_marginTop="10dp"
        android:layout_height="40dp"
        android:drawableLeft="@drawable/idcard"
        android:paddingLeft="2dp"/>
    <EditText
        android:id="@+id/ED_username"
        android:hint="@string/username"
        android:layout_width="190dp"
        android:layout_marginTop="10dp"
        android:layout_height="40dp"
        android:drawableLeft="@drawable/username"
        android:paddingLeft="2dp"/>
    <EditText
        android:id="@+id/ED_password"
        android:hint="@string/password"
        android:layout_width="190dp"
        android:layout_marginTop="10dp"
        android:layout_height="40dp"
        android:inputType="textPassword"
        android:drawableLeft="@drawable/password"/>
    <EditText
        android:id="@+id/ED_confirm_password"
        android:hint="@string/confirm_password"
        android:layout_width="190dp"
        android:layout_marginTop="10dp"
        android:layout_height="40dp"
        android:inputType="textPassword"
        android:drawableLeft="@drawable/password"/>
    <Button
        android:id="@+id/button_register"
        android:layout_width="190dp"
        android:layout_height="40dp"
        android:layout_marginTop="20dp"
        android:background="#04ea00"
        android:text="@string/register_button" />
    <LinearLayout
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:layout_marginTop="10dp"
        android:orientation="horizontal">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="35dp"
            android:text="@string/already_registered"/>
        <TextView
            android:id="@+id/TV_login"
            android:layout_width="wrap_content"
            android:layout_height="35dp"
            android:paddingLeft="10dp"
            android:textColor="#04ea00"
            android:textStyle="bold"
            android:text="@string/login"/>
    </LinearLayout>
</LinearLayout>