<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.ciber.retoandroid_asier_iker.EditAllowanceActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="center_horizontal">

        <ImageView
            android:layout_width="70dp"
            android:layout_height="50dp"
            android:layout_marginTop="50dp"
            app:srcCompat="@drawable/allowances"></ImageView>
        <EditText
            android:id="@+id/txt_Allowance_Code"
            android:hint="@string/expense_code"
            android:layout_width="190dp"
            android:layout_marginTop="5dp"
            android:layout_height="40dp"
            android:drawableLeft="@drawable/code"
            android:paddingLeft="2dp"
            android:inputType="number"/>
        <EditText
            android:id="@+id/txt_Allowance_Name"
            android:hint="@string/allowance_name"
            android:layout_width="190dp"
            android:layout_marginTop="5dp"
            android:layout_height="40dp"
            android:drawableLeft="@drawable/allowance_name"
            android:paddingLeft="2dp"/>
        <EditText
            android:id="@+id/txt_Allowance_Start_Date"
            android:hint="@string/startdate"
            android:layout_width="190dp"
            android:layout_marginTop="10dp"
            android:layout_height="40dp"
            android:drawableLeft="@drawable/date"
            android:paddingLeft="2dp"
            android:inputType="date"/>
        <EditText
            android:id="@+id/txt_Allowance_End_Date"
            android:hint="@string/enddate"
            android:layout_width="190dp"
            android:layout_marginTop="10dp"
            android:layout_height="40dp"
            android:drawableLeft="@drawable/date"
            android:paddingLeft="2dp"
            android:inputType="date"/>
        <Spinner
            android:id="@+id/spinner_Location"
            android:hint="@string/location"
            android:layout_width="190dp"
            android:layout_marginTop="10dp"
            android:layout_height="40dp"
            android:drawableLeft="@drawable/location"
            android:paddingLeft="2dp"
            android:entries="@array/location"/>
        <Spinner
            android:id="@+id/spinner_Transport"
            android:hint="@string/means_of_transport"
            android:layout_width="190dp"
            android:layout_marginTop="10dp"
            android:layout_height="40dp"
            android:drawableLeft="@drawable/username"
            android:paddingLeft="2dp"
            android:entries="@array/transports"/>
        <EditText
            android:id="@+id/txt_Travelled_Distances"
            android:hint="@string/travelleddistances"
            android:layout_width="190dp"
            android:layout_marginTop="10dp"
            android:layout_height="40dp"
            android:drawableLeft="@drawable/travelled_distances"
            android:paddingLeft="2dp"
            android:inputType="numberDecimal"/>
        <EditText
            android:id="@+id/txt_Toll_Amount"
            android:hint="@string/toll"
            android:layout_width="190dp"
            android:layout_marginTop="10dp"
            android:layout_height="40dp"
            android:drawableLeft="@drawable/amount"
            android:paddingLeft="2dp"
            android:inputType="numberDecimal"/>
        <EditText
            android:id="@+id/txt_Parking_Amount"
            android:hint="@string/parking"
            android:layout_width="190dp"
            android:layout_marginTop="10dp"
            android:layout_height="40dp"
            android:drawableLeft="@drawable/amount"
            android:paddingLeft="2dp"
            android:inputType="numberDecimal"/>
        <Button
            android:id="@+id/button_allowances_edit"
            android:layout_width="190dp"
            android:layout_height="40dp"
            android:layout_marginTop="10dp"
            android:background="#04ea00"
            android:text="@string/edit_allowance" />




    </LinearLayout>
</RelativeLayout>