<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.ciber.fragments.CreditCardFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".MainActivity">

        <androidx.cardview.widget.CardView
            android:id="@+id/cardView"
            android:layout_width="300dp"
            android:layout_height="178dp"
            android:layout_marginTop="167dp"
            android:elevation="5dp"
            app:cardBackgroundColor="@color/colorPrimary"
            app:cardCornerRadius="8dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <androidx.appcompat.widget.AppCompatImageView

                    android:id="@+id/appCompatImageView"
                    android:layout_width="120dp"
                    android:layout_height="95dp"
                    android:layout_marginStart="2dp"
                    android:layout_marginTop="2dp"
                    android:src="@mipmap/ic_chip"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"></androidx.appcompat.widget.AppCompatImageView>

                <androidx.appcompat.widget.AppCompatImageView
                    android:id="@+id/appCompatImageView2"
                    android:layout_width="92dp"
                    android:layout_height="74dp"
                    android:src="@mipmap/ic_mastercard"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.813"
                    app:layout_constraintStart_toEndOf="@+id/appCompatImageView"
                    tools:layout_editor_absoluteY="2dp"
                    tools:ignore="MissingConstraints"></androidx.appcompat.widget.AppCompatImageView>

                <TextView
                    android:id="@+id/textViewCard"

                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="60dp"
                    android:text="@string/numero_cuenta"
                    android:textColor="@android:color/white"
                    android:textSize="20sp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.279"
                    app:layout_constraintStart_toStartOf="@+id/appCompatImageView"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintVertical_bias="0.642"></TextView>

                <TextView
                    android:id="@+id/textView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="53dp"
                    android:layout_marginBottom="23dp"
                    android:text="@string/banco_test"
                    android:textColor="@android:color/white"
                    android:textSize="15sp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"></TextView>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="10dp"
                    android:layout_marginBottom="23dp"
                    android:text="@string/vence_test"
                    android:textColor="@android:color/white"
                    android:textSize="15sp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toStartOf="@+id/textViewDate"
                    app:layout_constraintHorizontal_bias="1.0"
                    app:layout_constraintStart_toEndOf="@+id/textView"
                    tools:ignore="UnknownId"></TextView>

                <TextView
                    android:id="@+id/textViewDate"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="33dp"
                    android:layout_marginBottom="23dp"
                    android:text="@string/fecha"
                    android:textColor="@android:color/white"
                    android:textSize="15sp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"></TextView>


            </androidx.constraintlayout.widget.ConstraintLayout>


        </androidx.cardview.widget.CardView>


        <Button
            android:id="@+id/button_scan"
            android:layout_width="250dp"
            android:layout_height="45dp"
            android:background="@color/colorPrimary"
            android:onClick="scanearTarjeta"
            android:text="Scan"

            android:textColor="#FFF"
            android:textSize="18sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.496"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/cardView"
            app:layout_constraintVertical_bias="0.316" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</FrameLayout>
